// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewriteProgressDisplay Component Rendering should render progress container when isProgressActive is true and overallStatus is not failed 1`] = `
<div>
  <div
    class="css-6z8a2o"
  >
    <div
      class="css-k03vbd"
    >
      <div
        class="progress-title"
      >
        SQL重写进度
      </div>
      <div
        class="progress-status"
      >
        <div
          class="spinner"
        />
        <span
          class="status-text"
        >
          正在使用大模型生成结果，请稍候...
        </span>
      </div>
      <button
        class="ant-btn ant-btn-text ant-btn-sm ant-btn-icon-only progress-toggle-button"
        title="展开进度详情"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <svg
            fill="none"
            height="22"
            viewBox="0 0 16 16"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="#C3C6CD"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-1gzz1dm"
    >
      <div
        class="overall-progress-bar"
      >
        <div
          class="progress-fill"
          style="width: 66.67%;"
        />
      </div>
      <div
        class="progress-text"
      >
        66.67%
         
        -
         
        2 / 3 条规则
      </div>
    </div>
    <div
      class="css-1yw5gwd"
    >
      <div
        class="css-tqq6rd"
      >
        <div
          class="rule-item rule-item-move rule-item-completed rule-completed css-4tnrqz"
        >
          <div
            class="css-1oi9ubo"
          >
            <div
              class="rule-name"
            >
              Test Rule 1
            </div>
            <div
              class="rule-status"
            >
              <div
                class="wave-progress completed css-n74x3p"
                hidden=""
              >
                <div
                  class="wave-container"
                >
                  <div
                    class="wave-background"
                  />
                  <div
                    class="wave wave1"
                  />
                  <div
                    class="wave wave2"
                  />
                  <div
                    class="wave wave3"
                  />
                </div>
                <div
                  class="stage-indicator"
                />
              </div>
              <span
                class="rule-item-status-text completed css-jj58qx"
              >
                已完成
              </span>
            </div>
          </div>
          <div
            class="css-fdm2p6"
          >
            Description for test rule 1
          </div>
          <div
            class="rewritten-sql-display css-1lfcxes"
          >
            <div
              class="rewritten-sql-header"
            >
              <div
                class="sql-label"
              >
                重写后SQL
              </div>
              <div
                class="sql-actions"
              >
                <div
                  class="actiontech-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="actiontech-sql-snippet-renderer-wrapper css-q962ee"
            >
              <div
                class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line margin-bottom-0"
              >
                <span>
                  <span
                    class="hljs-keyword"
                  >
                    SELECT
                  </span>
                   
                  <span
                    class="hljs-operator"
                  >
                    *
                  </span>
                   
                  <span
                    class="hljs-keyword"
                  >
                    FROM
                  </span>
                   table1;
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rule-item rule-item-move rule-item-completed rule-completed css-4tnrqz"
        >
          <div
            class="css-1oi9ubo"
          >
            <div
              class="rule-name"
            >
              Test Rule 3
            </div>
            <div
              class="rule-status"
            >
              <div
                class="wave-progress completed css-n74x3p"
                hidden=""
              >
                <div
                  class="wave-container"
                >
                  <div
                    class="wave-background"
                  />
                  <div
                    class="wave wave1"
                  />
                  <div
                    class="wave wave2"
                  />
                  <div
                    class="wave wave3"
                  />
                </div>
                <div
                  class="stage-indicator"
                />
              </div>
              <span
                class="rule-item-status-text completed css-jj58qx"
              >
                已完成
              </span>
            </div>
          </div>
          <div
            class="css-fdm2p6"
          >
            Description for test rule 3
          </div>
          <div
            class="css-14hq9e7"
          >
            处理失败
            : 
            Test error message
          </div>
        </div>
        <div
          class="rule-item rule-item-move css-4tnrqz"
        >
          <div
            class="css-1oi9ubo"
          >
            <div
              class="rule-name"
            >
              Test Rule 2
            </div>
            <div
              class="rule-status"
            >
              <div
                class="wave-progress waiting css-n74x3p"
              >
                <div
                  class="wave-container"
                >
                  <div
                    class="wave-background"
                  />
                  <div
                    class="wave wave1"
                  />
                  <div
                    class="wave wave2"
                  />
                  <div
                    class="wave wave3"
                  />
                </div>
                <div
                  class="stage-indicator"
                />
              </div>
              <span
                class="rule-item-status-text css-jj58qx"
              >
                等待中...
              </span>
            </div>
          </div>
          <div
            class="css-fdm2p6"
          >
            Description for test rule 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RewriteProgressDisplay Component Rendering should render rewrite failed UI when overallStatus is failed and errorMessage exists 1`] = `
<div>
  <div
    class="css-1gzyrnr"
  >
    <div
      class="rewrite-failed-title"
    >
      重写失败
    </div>
    <div
      class="rewrite-failed-message"
    >
      Test error message
    </div>
    <button
      class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
      type="button"
    >
      <span>
        重 试
      </span>
    </button>
  </div>
</div>
`;

exports[`RewriteProgressDisplay Rewritten SQL Display should render rewritten SQL for processed rules with rewritten SQL 1`] = `
<div
  class="rewritten-sql-display css-1lfcxes"
>
  <div
    class="rewritten-sql-header"
  >
    <div
      class="sql-label"
    >
      重写后SQL
    </div>
    <div
      class="sql-actions"
    >
      <div
        class="actiontech-copy-icon css-1s8kb8e"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="actiontech-sql-snippet-renderer-wrapper css-q962ee"
  >
    <div
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line margin-bottom-0"
    >
      <span>
        <span
          class="hljs-keyword"
        >
          SELECT
        </span>
         
        <span
          class="hljs-operator"
        >
          *
        </span>
         
        <span
          class="hljs-keyword"
        >
          FROM
        </span>
         users 
        <span
          class="hljs-keyword"
        >
          WHERE
        </span>
         id 
        <span
          class="hljs-operator"
        >
          =
        </span>
         
        <span
          class="hljs-number"
        >
          1
        </span>
        ;
      </span>
    </div>
  </div>
</div>
`;
